fixing overflow bug for icons

--- a/src/sass/includes/_iconography.scss
+++ b/src/sass/includes/_iconography.scss
@@ -33,7 +33,7 @@
 .iconography-content {
 	max-width: 1020px;
 	margin: 0 auto;
-	overflow: auto;
+	overflow: hidden;
 	position: relative;
 }
 
